# SonarApp

./: .gitignore  CONTRACTS.md  LICENSE  LIMITATIONS.md  README.md  start_network.bat
docs/: ETHICS.md  EVAL.md  SPEC.md
shared/: signals_taxonomy.yaml
shared/prompts/: classifier_v3.txt
shared/schemas/: classification.py
track_a_desktop/: alert_sender.py  classifier.py  decision_engine.py  demo_run.py  eval_harness.py  pipeline.py  preflight.py  pyproject.toml  render_report.py  stt_module.py
track_a_desktop/tests/: test_classifier.py  test_decision_engine.py  test_demo_run.py  test_eval_harness.py  test_preflight.py  test_render_report.py  test_stt_module.py  test_ui_store.py
track_a_desktop/ui_local/: __init__.py  app.py  contacts_store.py  store.py
track_c_dataset/: build_ground_truth.py  eval_real.py  eval_tts.py  ground_truth.json  ground_truth_tts.json  quality_check.py  quality_report.json  quality_report_tts.json  tts_generator.py
track_c_dataset/audio_real/: ground_truth_real.json
track_c_dataset/audio_tts/: legit_bank_001.txt  legit_bank_app_002.txt  legit_bank_card_003.txt  legit_clinic_001.txt  legit_clinic_002.txt  legit_clinic_exam_003.txt  legit_delivery_001.txt  legit_family_001.txt  legit_family_help_002.txt  legit_family_money_001.txt  legit_government_info_001.txt  legit_telemarketing_001.txt  legit_utility_001.txt  scam_authority_001.txt  scam_bank_pix_002.txt  scam_family_001.txt  scam_financial_001.txt  scam_gift_card_002.txt  scam_isolation_001.txt  scam_otp_002.txt  scam_personal_data_002.txt  scam_remote_access_001.txt  (+3 more)
(+27 files in other folders)
